deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: news
  annotations:
    cert-manager.io/issuer: "letsencrypt-production"
    acme.cert-manager.io/http01-edit-in-place: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - zeliclabs.com
    secretName: news-sample-secret
  rules:
  - host: zeliclabs.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: news
            port:
              number: 80
